# allsat-circuits

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: XOR.aag  halfadder.aag
benchmarks/bad_examples/: empty.aag  mult_out.aag
benchmarks/iscas85/only_last_out/c1355/: c1355.aag  c1355.aig  c1355.cnf
benchmarks/iscas85/only_last_out/c1908/: c1908.aag  c1908.aig  c1908.cnf
benchmarks/iscas85/only_last_out/c2670/: c2670.aag  c2670.aig  c2670.cnf
benchmarks/iscas85/only_last_out/c3540/: c3540.aag  c3540.aig  c3540.cnf
benchmarks/iscas85/only_last_out/c432/: c432.aag  c432.aig  c432.cnf
benchmarks/iscas85/only_last_out/c499/: c499.aag  c499.aig  c499.cnf
benchmarks/iscas85/only_last_out/c5315/: c5315.aag  c5315.aig  c5315.cnf
benchmarks/iscas85/only_last_out/c6288/: c6288.aag  c6288.aig  c6288.cnf
benchmarks/iscas85/only_last_out/c7552/: c7552.aag  c7552.aig  c7552.cnf
benchmarks/iscas85/only_last_out/c880/: c880.aag  c880.aig  c880.cnf
benchmarks/iscas85/or/c1355/: c1355.aag  c1355.aig  c1355.cnf
benchmarks/iscas85/or/c1908/: c1908.aag  c1908.aig  c1908.cnf
benchmarks/iscas85/or/c2670/: c2670.aag  c2670.aig  c2670.cnf
benchmarks/iscas85/or/c3540/: c3540.aag  c3540.aig  c3540.cnf
benchmarks/iscas85/or/c432/: c432.aag  c432.aig  c432.cnf
benchmarks/iscas85/or/c499/: c499.aag  c499.aig  c499.cnf
benchmarks/iscas85/or/c5315/: c5315.aag  c5315.aig  c5315.cnf
benchmarks/iscas85/or/c6288/: c6288.aag  c6288.aig  c6288.cnf
benchmarks/iscas85/or/c7552/: c7552.aag  c7552.aig  c7552.cnf
benchmarks/iscas85/or/c880/: c880.aag  c880.aig  c880.cnf
benchmarks/iscas85/xor/c1355/: c1355.aag  c1355.aig  c1355.cnf
benchmarks/iscas85/xor/c1908/: c1908.aag  c1908.aig  c1908.cnf
benchmarks/iscas85/xor/c2670/: c2670.aag  c2670.aig  c2670.cnf
benchmarks/iscas85/xor/c3540/: c3540.aag  c3540.aig  c3540.cnf
benchmarks/iscas85/xor/c432/: c432.aag  c432.aig  c432.cnf
benchmarks/iscas85/xor/c499/: c499.aag  c499.aig  c499.cnf
benchmarks/iscas85/xor/c5315/: c5315.aag  c5315.aig  c5315.cnf
benchmarks/iscas85/xor/c6288/: c6288.aag  c6288.aig  c6288.cnf
benchmarks/iscas85/xor/c7552/: c7552.aag  c7552.aig  c7552.cnf
benchmarks/iscas85/xor/c880/: c880.aag  c880.aig  c880.cnf
benchmarks/islis_benchmarks/arithmetic_or/adder/: adder.cnf
benchmarks/islis_benchmarks/arithmetic_or/bar/: bar.aag  bar.aig  bar.cnf
benchmarks/islis_benchmarks/arithmetic_or/div/: div.aag  div.aig
benchmarks/islis_benchmarks/arithmetic_or/log2/: log2.aag
benchmarks/islis_benchmarks/arithmetic_or/max/: max.aag  max.cnf
benchmarks/islis_benchmarks/arithmetic_or/multiplier/: multiplier.aag  multiplier.aig  multiplier.cnf
benchmarks/islis_benchmarks/arithmetic_or/sin/: sin.aig  sin.cnf
benchmarks/islis_benchmarks/arithmetic_or/sqrt/: sqrt.aag  sqrt.aig  sqrt.cnf
benchmarks/islis_benchmarks/arithmetic_xor/adder/: adder.cnf
benchmarks/islis_benchmarks/arithmetic_xor/bar/: bar.cnf
benchmarks/islis_benchmarks/arithmetic_xor/div/: div.aag  div.aig  div.cnf
benchmarks/islis_benchmarks/arithmetic_xor/hyp/: hyp.aig
benchmarks/islis_benchmarks/arithmetic_xor/log2/: log2.cnf
benchmarks/islis_benchmarks/arithmetic_xor/max/: max.aig  max.cnf
benchmarks/islis_benchmarks/arithmetic_xor/sin/: sin.aag  sin.aig
benchmarks/islis_benchmarks/arithmetic_xor/sqrt/: sqrt.aag  sqrt.cnf
benchmarks/islis_benchmarks/random_control_or/cavlc/: cavlc.aag  cavlc.aig
benchmarks/islis_benchmarks/random_control_or/ctrl/: ctrl.aig
benchmarks/islis_benchmarks/random_control_or/dec/: dec.aag  dec.aig  dec.cnf
benchmarks/islis_benchmarks/random_control_or/i2c/: i2c.aig  i2c.cnf
benchmarks/islis_benchmarks/random_control_or/int2float/: int2float.aig
benchmarks/islis_benchmarks/random_control_or/mem_ctrl/: mem_ctrl.cnf
benchmarks/islis_benchmarks/random_control_or/priority/: priority.aag  priority.aig
benchmarks/sta_benchmarks/pi_105/: pi_105.aag
benchmarks/sta_benchmarks/pi_113/: pi_113.cnf
benchmarks/sta_benchmarks/pi_121/: pi_121.cnf
benchmarks/sta_benchmarks/pi_129/: pi_129.aag  pi_129.cnf
benchmarks/sta_benchmarks/pi_17/: pi_17.aag
benchmarks/sta_benchmarks/pi_33/: pi_33.aag
benchmarks/sta_benchmarks/pi_41/: pi_41.aag  pi_41.cnf
benchmarks/sta_benchmarks/pi_49/: pi_49.aag
benchmarks/sta_benchmarks/pi_65/: pi_65.aag  pi_65.cnf
benchmarks/sta_benchmarks/pi_73/: pi_73.aag  pi_73.cnf
benchmarks/sta_benchmarks/pi_81/: pi_81.aag
benchmarks/sta_benchmarks/pi_89/: pi_89.aag
benchmarks/sta_benchmarks/pi_9/: pi_9.aag  pi_9.cnf
benchmarks/sta_benchmarks_large/pi_11009/: pi_11009.cnf
benchmarks/sta_benchmarks_large/pi_13009/: pi_13009.cnf
benchmarks/sta_benchmarks_large/pi_1509/: pi_1509.aag  pi_1509.cnf
benchmarks/sta_benchmarks_large/pi_2009/: pi_2009.cnf
benchmarks/sta_benchmarks_large/pi_2509/: pi_2509.aag
benchmarks/sta_benchmarks_large/pi_3009/: pi_3009.cnf
benchmarks/sta_benchmarks_large/pi_4009/: pi_4009.aag  pi_4009.cnf
benchmarks/sta_benchmarks_large/pi_5009/: pi_5009.aag
benchmarks/sta_benchmarks_large/pi_9009/: pi_9009.aag  pi_9009.cnf
benchmarks/sta_benchmarks_large/pi_919/: pi_919.aag  pi_919.cnf
libs/: CMakeLists.txt
src/: main.cpp
src/Aiger/: AigAndGate.hpp  AigerParser.hpp
src/AllSatAlgo/: Algorithms.hpp  AllSatAlgoBase.cpp  AllSatAlgoBase.hpp
src/AllSatAlgo/Blocking/: AllSatAlgoBlockingBase.cpp  AllSatAlgoBlockingBase.hpp
src/AllSatSolver/: AllSatSolverBase.cpp  AllSatSolverBase.hpp  Solvers.hpp
src/AllSatSolver/Ipasir/: AllSatSolverIpasir.cpp  AllSatSolverIpasir.hpp
src/AllSatSolver/Topor/: AllSatSolverTopor.cpp  AllSatSolverTopor.hpp
src/CirSimulation/: CirSim.cpp  CirSim.hpp
src/Globals/: AllSatAlgoGlobals.hpp  AllSatGloblas.hpp  AllSatSolverGloblas.hpp  TernaryVal.hpp  ToporGlobal.hpp
src/Utilities/: InputParser.hpp  StringUtilities.hpp
src/allsatenumer/: AigAndGate.hpp  AigerParser.hpp  AllSatEnumer.hpp  AllSatEnumerBase.hpp  AllSatEnumerDualRail.hpp  AllSatEnumerTernarySim.hpp  AllSatGloblas.hpp  InputParser.hpp  TernarySim.hpp  Utilities.hpp  main.cpp
(+343 files in other folders)
